# TFENN-examples

./: .gitignore  README.md  ep_training_script.zsh  neohookean_training_script.zsh  pyproject.toml  tcell_rotation_training_script.zsh  tcell_training_script.zsh
core/: __init__.py  activation.py  dataset.py  dataset_sampler.py  feature_type.py  initializer.py  loss.py  metrics.py  network.py  optimizer.py  scaler.py  scheduler.py  trainer.py
scripts/: cmd_args.py  predict.py  train.py
util/: __init__.py  file_io.py  sub_argparse.py
